# flake8-black

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  MANIFEST.in  README.rst  flake8_black.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml
tests/: run_tests.sh  test_global_config.py
tests/conflicting_configurations/: .flake8  goodbye.py  hello.txt  output.txt
tests/flake8_config/: flake8
tests/non_conflicting_configurations/: hello.py
tests/test_cases/: mixed_tab_spaces.py  no_closing_bracket.py  stub.pyi
tests/test_changes/: black_preview.py  black_preview.txt  commas.py  commas.txt  hello_world.py  hello_world.txt  hello_world_EOF.py  hello_world_EOF.txt
tests/with_bad_toml/: and_goodbye.py  hello_world.txt  pyproject.toml  with_bad_toml.txt
tests/with_pyproject_toml/: ignoring_toml.txt  pyproject.toml
tests/without_pyproject_toml/: ordinary_quotes.py
